trabajo no listo

--- a/dashboard.html
+++ b/dashboard.html
@@ -40,15 +40,15 @@
                 <img src="img/profile_avatar.png" class="img-circle" width="60">
               </a>
             </p>
-            <h5 class="text-center">Bonnibel Bubblegum</h5>
-            <div class="top-menu"> 
+            <h5 class="text-center">Bonnibel Bubblegum</h5> 
               <li class="sub-menu">
+              <div class="Dashboard-morado">
                 <a class="a-blanco" href="dashboard.html">
                   <i class="fa fa-dashboard"></i>
                   <span>Dashboard</span>
                 </a>
+              </div>
               </li>
-            </div> 
             <li class="sub-menu">
               <a class="a-blanco" href="buttons.html" >
                 <i class="fa fa-desktop"></i>
