--- a/form_component.html
+++ b/form_component.html
@@ -17,18 +17,18 @@
      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
   </head>
   <body>
-  <section id="container" >
+  <section id="container">
       <header class="header black-bg">
         <div class="sidebar-toggle-box">
-            <div class="fa fa-bars tooltips" data-placement="right" data-original-title="Toggle Navigation"></div>
-        </div>       
+          <div class="hamburguesa fa fa-bars tooltips" data-placement="right" data-original-title="Toggle Navigation"></div>
+        </div>
         <a href="dashboard.html" class="logo">
           <b class="hidden-xs">ADVENTURE TIME: DASHBOARD</b>
           <b class="visible-xs">ADV.TIME</b>
         </a>
         <div class="top-menu">
           <ul class="nav pull-right top-menu">
-            <li><a class="logout" href="login.html">Logout</a></li>
+            <li><a class="a-blanco" href="login.html">Logout</a></li>
           </ul>
         </div>
       </header>
@@ -40,45 +40,47 @@
                 <img src="img/profile_avatar.png" class="img-circle" width="60">
               </a>
             </p>
-            <h5 class="text-center">Bonnibel Bubblegum</h5>
+            <h5 class="text-center">Bonnibel Bubblegum</h5> 
+              <li class="sub-menu">
+              <div class="Dashboard-morado">
+                <a class="a-blanco" href="dashboard.html">
+                  <i class="fa fa-dashboard"></i>
+                  <span>Dashboard</span>
+                </a>
+              </div>
+              </li>
             <li class="sub-menu">
-              <a href="dashboard.html">
-                <i class="fa fa-dashboard"></i>
-                <span>Dashboard</span>
-              </a>
-            </li>
-            <li class="sub-menu">
-              <a href="buttons.html" >
+              <a class="a-blanco" href="buttons.html" >
                 <i class="fa fa-desktop"></i>
                 <span>Buttons</span>
               </a>
             </li>
             <li class="sub-menu">
-              <a href="progress.html" >
+              <a class="a-blanco" href="progress.html" >
                 <i class="fa fa-desktop"></i>
                 <span>Progress Bars</span>
               </a>
-            </li>            
+            </li>
             <li class="sub-menu">
-              <a class="active" href="form_component.html" >
+              <a class="a-blanco" href="form_component.html" >
                 <i class="fa fa-cogs"></i>
                 <span>Forms</span>
               </a>
             </li>
             <li class="sub-menu">
-              <a href="basic_tables.html" >
+              <a class="a-blanco" href="basic_tables.html" >
                 <i class="fa fa-th"></i>
                 <span>Data Tables</span>
               </a>
-            </li>            
+            </li>
             <li class="sub-menu">
-              <a href="gallery.html" >
+              <a class="a-blanco" href="gallery.html" >
                 <i class="fa fa-tasks"></i>
                 <span>Gallery</span>
               </a>
             </li>
             <li class="sub-menu">
-              <a href="login.html" >
+              <a class="a-blanco" href="login.html" >
                 <i class="fa fa-book"></i>
                 <span>Login Page</span>
               </a>
